refactor: base