@@ -4,8 +4,12 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 
@@ -16,50 +20,31 @@ public class SynonymAPI {
     public static final String API = "https://api.datamuse.com/words?";
     public static final int DEFAULT_LIMIT = 50;
 
-    /**
-     * Get synonyms for a word using the default limit.
-     *
-     * @param word The word for which synonyms are to be retrieved.
-     * @return An ArrayList of synonyms, or null if there is an error.
-     */
     public static ArrayList<String> getSynonyms(final String word) {
         return getSynonyms(word, DEFAULT_LIMIT);
     }
 
-    /**
-     * Get synonyms for a word with a specified limit.
-     *
-     * @param word  The word for which synonyms are to be retrieved.
-     * @param limit The maximum number of synonyms to retrieve.
-     * @return An ArrayList of synonyms, or null if there is an error.
-     */
-    public static ArrayList<String> getSynonyms(final String word, final int limit) {
+    public static ArrayList<String> getSynonyms(final String word, final int max) {
         try {
             final StringBuilder urlStr = new StringBuilder(API);
             urlStr.append(String.format("&ml=%s", URLEncoder.encode(word, StandardCharsets.UTF_8).replace("+", "%20")));
-            urlStr.append(String.format("&max=%d", limit));
+            urlStr.append(String.format("&max=%d", max));
 
-            final URL url = new URL(urlStr.toString());
-            final HttpURLConnection request = (HttpURLConnection) url.openConnection();
-            request.setRequestMethod("GET");
+            HttpClient client = HttpClient.newHttpClient();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(urlStr.toString()))
+                    .GET()
+                    .build();
 
-            final BufferedReader inputStream = new BufferedReader(new InputStreamReader(request.getInputStream()));
-            String inputLine;
-            final StringBuilder response = new StringBuilder();
-            while ((inputLine = inputStream.readLine()) != null) {
-                response.append(inputLine);
-            }
-            inputStream.close();
-
-            final JSONArray jsonArray = new JSONArray(response.toString());
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            final JSONArray jsonArray = new JSONArray(response.body());
             final ArrayList<String> words = new ArrayList<>();
             for (int i = 0; i < jsonArray.length(); i++) {
                 final JSONObject obj = jsonArray.getJSONObject(i);
                 words.add(obj.getString("word"));
             }
-
             return words;
-        } catch (final IOException e) {
+        } catch (final Exception e) {
             e.printStackTrace();
             return null;
         }
